Add base Sass configuration

--- a/index.html
+++ b/index.html
@@ -8,6 +8,54 @@
     <title>DADA</title>
   </head>
   <body>
-    <h1>DADA Landing Page</h1>
+    <nav>
+      <a href="#" class="logo">DADA</a>
+      <a href="#" class="btn-light">Login</a>
+    </nav>
+    <header>
+      <h1>A parenting coach in your pocket</h1>
+      <img src="img/device-mockup-1.svg" alt="Dada App mockup" />
+    </header>
+    <main>
+      <h2>Most parenting resorces are built with moms in mind.</h2>
+      <h2>We've created one for you, Dad!</h2>
+      <p>
+        We want to empower fathers to parent with confidence and enjoy more
+        quality time with their kids.
+      </p>
+      <a href="#" class="btn-dark">Get Dadvice</a>
+    </main>
+    <section class="product-info">
+      <h2>Here you will find:</h2>
+      <div class="flex-container">
+        <div class="item">
+          <p><b>Low-effort activity ideas</b> to suit your mood and budget</p>
+          <img src="img/penguin1.svg" alt="Penguin having an idea" />
+        </div>
+        <div class="item">
+          <p>
+            <b>Fast and clear answers</b> to most common parenting challenges
+          </p>
+          <img src="img/penguin2.svg" alt="Penguin being angry" />
+        </div>
+        <div class="item">
+          <p>
+            <b>Cliff-notes</b> from top rated parenting books
+            <i>(because who has time to read the whole thing?)</i>
+          </p>
+          <img src="img/penguin3.svg" alt="Penguin reading" />
+        </div>
+        <div class="item">
+          <p><b>Longer reads</b> for the super dads out there</p>
+          <img src="img/penguin4.svg" alt="Penguin working out" />
+        </div>
+        <a href="#" class="btn-dark">Sign up</a>
+      </div>
+    </section>
+    <footer>
+      <a href="">Contact Us</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+    </footer>
   </body>
 </html>
