--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <img src="img/device-mockup-1.svg" alt="Dada App mockup" />
     </header>
     <main>
-      <h2>Most parenting resorces are built with moms in mind.</h2>
-      <h2>We've created one for you, Dad!</h2>
+      <h2>Most parenting resources are built with moms in mind.</h2>
+      <h3>We've created one for you, Dad!</h3>
       <p>
         We want to empower fathers to parent with confidence and enjoy more
         quality time with their kids.
