Change structure in product-info section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
     <section class="product-info">
       <h2>Here you will find:</h2>
-      <div class="flex-container">
+      <div class="container">
         <div class="item">
           <p><b>Low-effort activity ideas</b> to suit your mood and budget</p>
           <img src="img/penguin1.svg" alt="Penguin having an idea" />
@@ -49,8 +49,8 @@
           <p><b>Longer reads</b> for the super dads out there</p>
           <img src="img/penguin4.svg" alt="Penguin working out" />
         </div>
-        <a href="#" class="btn-dark">Sign up</a>
       </div>
+      <a href="#" class="btn-dark">Sign up</a>
     </section>
     <footer>
       <a href="">Contact Us</a>
